--- a/src/Components/Features.css
+++ b/src/Components/Features.css
@@ -2,7 +2,9 @@
   min-height: 50vh;
   display: flex;
   flex-direction: column;
-  padding: 0 5rem 0 5rem;
+  padding: 0 6rem 0 6rem;
+  width: 100%;
+  place-content: center;
 }
 
 .features h2 {
