--- a/src/Components/Reviews.css
+++ b/src/Components/Reviews.css
@@ -18,4 +18,13 @@
 
 .review {
   margin: auto;
+  border: 1px solid white;
+  padding: 4rem;
+  border-radius: 1rem;
+}
+
+.review:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  transition: all 0.15s ease-in-out;
 }
