--- a/src/Components/Features.css
+++ b/src/Components/Features.css
@@ -2,6 +2,7 @@
   min-height: 50vh;
   display: flex;
   flex-direction: column;
+  padding: 0 5rem 0 5rem;
 }
 
 .features h2 {
@@ -11,9 +12,19 @@
   font-size: 2rem;
 }
 
+.feature h3 {
+  color: #000;
+}
+
+.feature p {
+  width: 80%;
+}
+
 .first__div {
+  margin-top: 1rem;
   display: flex;
   flex-direction: row;
+  margin-bottom: 2rem;
 }
 
 .second__div {
